	  of 0 to get a string as long as we need is a nonportable GNU
	  extension, and hence it won't work on non-GNU systems that
	  don't define PATH_MAX. (DLR)
- rcfile.c:
  parse_rcfile()
	- Fix debugging message to display the long value of a flag
	  properly. (DLR)
- utils.c:
  regexec_safe()
	- Rename to safe_regexec() for consistency. (DLR)
- winio.c:
  statusq()
	- Make sure that the vsnprintf(foo) call and foo's subsequent
	  null termination both take the proper number of bytes when
	  using multibyte characters, so that multibyte prompt strings
	  aren't prematurely cut off. (DLR)
  titlebar()
	- Make sure that the (mv)?waddnstr() calls take the proper
	  number of bytes when using multibyte characters, so that
	  multibyte strings aren't prematurely cut off. (DLR, found by
	  Jordi)
	- Allow the "View" state to be displayed when a filename is
	  passed in, in case we're in multibuffer mode and inside the
	  file browser. (DLR)
  help_line_len()
	- Make the text display more flexible, and closer to what nano
	  1.2.x does. (DLR)
- configure.ac:
	- Allow more flexible handling of UTF-8 support by allowing
	  the --enable-utf8 and --disable-utf8 options. (Mike
	  Frysinger)  DLR: Extend these options to work with slang as
	  well as curses, consolidate the warning and error messages
	  dealing with UTF-8 support as much as possible, and add a few
	  minor consistency fixes.
- nanorc.sample:
	- Fix the description for the whitespace option to mention that
	  only single-column characters are allowed. (DLR)
	- Add C++ regexes. (Neil Brown, merged into c-file regexes by
	  DLR)
	- Break up overly long perl and nanorc regexes into separate
	  regexes of no more than 256 bytes, as POSIX-compliant regexp
	  implementations can reject regexes of over 256 bytes. (DLR)
- nano.1, nano.texi:
	- Mention the -? alias for -h/--help, and add various
	  consistency fixes. (DLR)
- nanorc.5:
	- Fix the description for the whitespace option to mention that